[project]
name = "pycalaos"
version = "0.0.25"
authors = [
	{ name = "Willow Maccagnoni", email = "willow.maccagnoni@gmail.com" },
]
description = "Calaos home automation client library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
license = { file = "LICENSE.txt" }
dependencies = [
	"netifaces"
]

[project.urls]
Homepage = "https://github.com/willoma/pycalaos"
Repository = "https://github.com/willoma/pycalaos.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

